# treeFitting

./: .CMakeLists.txt.swp  .run.sh.swp  CMakeCache.txt  CMakeLists.txt  KeyFrames_0.pcd  Makefile  MapPoints_0.pcd  Projected_cleanPointCloud.pcd  Projected_pointcloud_without_plane.pcd  README.md  README_FOR_USAGE  buildOpencv.sh  cmake_install.cmake  farm1left.csv  farm1right.csv  farm2left.csv  farm2right.csv  farm3left.csv  farm3right.csv  real_distance_Downward_scaled_point_cloud.pcd  real_distance_Scaled_keyframe.pcd  real_distance_Upward_scaled_poincloud.pcd  run.sh  run.sh.save  scaled_keyframe.pcd  scaled_keyframe_1.pcd  scaled_point_cloud.pcd  scaled_point_cloud_1.pcd  treeFit.cbp  treeFit.cpp  treeFit.cpp.backup  treeFitCloudClustering.cpp  treeFitEuclideanClustering.cpp
cmake_modules/: FindOctave.cmake
include/: CylinderProcessor.h  CylinderSegment.h  HeightEstimator.h  NormalEstimator.h  PlaneProcessor.h  PlaneSegment.h  Viewer.h
octaveSpace/: octave-workspace  octaveTest.m  readCSV.m  testRead.csv
src/: CylinderProcessor.cpp  CylinderSegment.cpp  HeightEstimator.cpp  NormalEstimator.cpp  PlaneProcessor.cpp  PlaneSegment.cpp  Viewer.cpp
